# tc

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
lib/: Cargo.toml
lib/benches/: benchmark.rs
lib/examples/: basic.rs
lib/src/: lib.rs
lib/tests/: integration.rs
